[package]
name = "gonzo"
version = "0.0.0"
license = "AGPL-3.0"
description = "Name reservation"
documentation = "https://github.com/Voidoz/gonzo"
homepage = "https://github.com/Voidoz/gonzo"
repository = "https://github.com/Voidoz/gonzo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
